# Fragmentation

./: .gitignore  README.md  all_keywords.txt  batch.py  clean_keywords.py  compute_removals.py  db.py  execute_keyword_cleanup.py  extract_rules.md  fragmentation.py  keep.txt  phase2_merge.py  phase3_short.py  prompt.md  pyproject.toml  refine_keywords.py  template.md  template_gather.md  test_fragmentation.py  tree.md
02-notes/tree/: AI.md  AI技术.md  AI辅助.md  API.md  C++.md  C++项目.md  C语言.md  DeepSeek.md  Docker.md  GPT.md  GitHub.md  Go.md  Haskell.md  Java.md  Linux.md  Obsidian.md  Python.md  RSS.md  TCP.md  Tauri.md  TypeScript.md  mac.md  个人成长与效率.md  中断.md  书籍.md  人工智能.md  人际关系.md  信任.md  信息流.md  健康.md  其他.md  内存.md  内存管理.md  内核.md  决定论.md  决策.md  创新.md  利益.md  前端.md  剥削.md  (+107 more)
03-MOC/: AI与工具.md  Index.md  人际关系.md  健康与习惯.md  心理与哲学.md  技术学习.md  杂.md  游戏与创作.md  经济与职业.md  认知与成长.md
docs/: dev-experience.md
docs/superpowers/plans/: 2026-04-22-fragmentation-refactor.md
docs/superpowers/specs/: 2026-04-22-fragmentation-refactor-design.md
src/: cli.py  config.py  mcp_server.py
src/logic/: add_subdomain.py  ai_client.py  ask_clarification.py  check_note.py  check_subdomain.py  extract_knowledge.py  query_tree.py  tree_sync.py
src/storage/: db.py  diary_parser.py  logger.py  note_store.py  tree_store.py
templates/: domain.md  note.md  subdomain.md
tests/: conftest.py
tests/edge/: test_edge.py
tests/integration/: test_flows.py
tests/smoke/: test_smoke.py
tests/unit/: test_db.py  test_extract_knowledge.py  test_note_store.py  test_tree_store.py
